[package]

name = "kissfft"
description = "Rust binding for Kiss FFT"
version = "0.0.9"
authors = ["Star Brilliant <m13253@hotmail.com>"]
license = "BSD-3-Clause"
homepage = "http://kissfft.sourceforge.net/"
repository = "https://github.com/m13253/rust-kissfft"
keywords = ["FFT", "signal"]
build = "build.rs"

[dependencies]
rand = "0.3"
